fix: fix some slides overflowing the page

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ img {
 
 ul,
 ol {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .remark-code-line {
